# mjolnir

./: README.md  conda.yaml  pyproject.toml
.github/workflows/: push.yaml
mjolnir/: __init__.py  compiler.py  graph.py  matrix.py  ops.py  tensor.py  test  value.py
mjolnir/compiler/: __init__.py  buffer.py  compiler.py  graph.py  ops.py  types.py
tests/: test_tensor.py
