[tool.poetry]
name = "mjolnir"
version = "0.1.0"
description = "LLVM auto-grad."
authors = ["Niels Horn <...@niels.ninja>"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
llvmlite = "^0.39.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
