[tool.poetry]
name = "mjolnir"
version = "0.1.0"
description = "JIT'ed autograd."
authors = ["Niels Horn"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dev-dependencies]
pytest = "^3.0.9"

[tool.poetry.dependencies]
python = "^3.10"
llvmlite = "^0.39.1"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
